--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>BigBoxTest</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico"> 
+  <script src="canvasjs/dist/canvasjs.js"></script>
 </head>
 <body>
   <app-root></app-root>
